date fix on mobile view

--- a/css/blogstyling.css
+++ b/css/blogstyling.css
@@ -18,7 +18,7 @@ a:hover {
   padding: 10px;
   text-align: center;
   font-weight: 500;
-  z-index: 9;
+  z-index: 1;
   color: #2c2c2c;
 }
 .blog .blog-post .blog-content {
